[package]
name = "ardupilot-binlog"
version = "0.1.0"
edition = "2021"
description = "Parser for ArduPilot DataFlash BIN log files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AveryanAlex/ardupilot-binlog"
keywords = ["ardupilot", "dataflash", "drone", "flight-log", "uav"]
categories = ["parser-implementations", "aerospace"]

[dependencies]
thiserror = "2"
